[package]
name = "help1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
rsa = "0.5.0"
efficient-sm2 = "0.1.5"
sm4 = "0.5.1"
smcrypto = "0.1.1"

ctr = "0.9.1"
cbc = "0.1.1"
block-padding = "0.3.2"

hex = "0.4.3"
hex-literal = "0.3.4"
rand = "0.8.5"
log = "0.4"
log4rs = "1.0.0"